assets/css/main.css
@import url('https://fonts.googleapis.com/css?family=Raleway:300,400,700');

*{
	font-family: 'Raleway', sans-serif;
}

html{
	width: 100vw;
	max-width: 700px;
	height: 100vh;
	overflow: auto;
	margin-left: 50%;
	transform: translateX(-50%);
	/*position: absolute;*/
	/*left: 50%;*/
	/*transform: translateX(-50%);*/
}

body{
	width: 100vw;
	max-width: 700px;
	margin: 0;
	background-color: #eeeeee;
	height: 100vh;
	overflow: auto;
	/*position: absolute;*/
	/*left: 50%;*/
	/*transform: translateX(-50%);*/
}

.main-container{
	position: relative;
	float: left;
	width: 100%;
	height: auto;
	background-color: #6a50ee;
	/*z-index: 999;*/
}

.main-logo-container{
	position: relative;
	float: left;
	overflow: hidden;
	height: 60vh;
	width: 100%;
}

.main-logo-container-content{
	top: 0;
	left: 0;
	width: 100%;
	height: 60vh;
	position: fixed;
	z-index: 1;
	/*pointer-events: none;*/
}

.spacer-60{
	position: relative;
	float: left;
	width: 100%;
	height: 60vh;
}

.spacer-100{
	position: relative;
	float: left;
	width: 100%;
	height: 100vh;
}

.z2{
	z-index: 2;
}

.z4{
	z-index: 4;
}



.main-logo-content{
	width: 100%;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	padding-bottom: 20px;
	/*margin-top: */
	height: auto;
}

.main-logo{
	width: 40vw;
	max-width: 344px;
	position: relative;
	float: left;
	margin-left: 50%;
	/*margin-top: 100px;*/
	transform: translateX(-50%);
	text-align: center;
}

.main-logo-content h1{
	color: #ffffff;
	font-size: 3em;
	font-weight: 300;
	position: relative;
	float: left;
	clear: both;
	margin-bottom: 0;
	margin-left: 50%;
	transform: translateX(-50%);
}

/*--------------------------------------------------GENERAL LARGE IMAGE*/

.image-container{
	/*margin-top: 60vh;*/
	background-color: #ffffff;
	width: 100%;
	height: 100vh;
	position: relative;
	float: left;
	z-index: 2;
}

.image-container-content{
	top: 0;
	left: 0;
	width: 100%;
	height: 100vh;
	position: absolute;
	z-index: 1;
}

.container-fixed{
	position: fixed;
	top: 0;
	left: 0;
	z-index: 3;
}

.image-content{
	width: 100%;
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	/*padding-bottom: 20px;*/
	/*margin-top: */
	height: auto;
}

.image-content-text{
	width: 80%;
	position: absolute;
	top: 8vh;
	left: 50%;
	color: #6a50ee;
	font-size: 1.3em;
	transform: translateX(-50%);
	text-align: center;
}

.image-container-text p{
	font-size: 1em;
}

.image{
	height: 80vh;
	position: relative;
	float: left;
	margin-left: 50%;
	margin-top: 20vh;
	transform: translateX(-50%);
}

.spacer-30{
	/*background-color: #6a50ee;*/
	position: relative;
	float: left;
	width: 100%;
	height: 30vh;
	z-index: 2;
	/*color: #ffffff;*/
	opacity: 0;
	/*mix-blend-mode: difference;*/
}

/*---------------------------------------------------------------------DOWNLOAD*/

.download-container{
	/*margin-top: 60vh;*/
	/*background-color: #6a50ee;*/
	width: 100%;
	height: 20vh;
	position: relative;
	float: left;
	z-index: 2;
	/*opacity: 0.8;*/
}

.download-color-block{
	width: 100%;
	height: 100%;
	position: absolute;
	z-index: 2;
	background-color: #6a50ee;
	opacity: 0.9;
}
.download-content{
	height: 100%;
	width: 100%;
	z-index: 3;
	position: absolute;
}
.download-image{
	height: 10vh;
	width: auto;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}


@media(max-width: 800px){
	*{
		-moz-transition: height 999999999999s ease-in;
	    -o-transition: height 999999999999s ease-in;
	    -webkit-transition: height 999999999999s ease-in;
	    transition: height 999999999999s ease-in;
	}
}

